--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@polymarket/clob-client": "^4.11.0",
+    "@solana/web3.js": "^1.95.4",
+    "bs58": "^6.0.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.4",
     "express": "^4.21.1"
